--- a/assets/styles/vars/_colors.scss
+++ b/assets/styles/vars/_colors.scss
@@ -15,9 +15,10 @@ $color-green: #21B787;
 $color-green--superlight: rgba(#75E0BE, .24);
 $color-gray--darkest: #363C51;
 $color-gray--dark: #404966;
-$color-gray--light: #8F929E;
+$color-gray--light: #555555;
 
 // Layout colors
+$color-accent: #0acee2;
 
 // Text colors
 $color-text-heading: $color-gray--dark;
