--- a/assets/styles/vars/_fonts.scss
+++ b/assets/styles/vars/_fonts.scss
@@ -1,2 +1,2 @@
-$font-regular: "Roboto", Arial, sans-serif;
-$font-accent: "Lato", Arial, sans-serif;
+$font-regular: 'Fira Sans', sans-serif;
+$font-accent: 'Lato', Arial, sans-serif;
