--- a/assets/styles/global/_base.scss
+++ b/assets/styles/global/_base.scss
@@ -25,8 +25,11 @@ body {
 }
 
 .mighty-wrapper {
-  padding-top: 97px;
   overflow-x: hidden;
+
+  &.stamp-top {
+    padding-top: 97px;
+  }
 }
 
 .no-selection {
