--- a/assets/styles/components/footer/footer.scss
+++ b/assets/styles/components/footer/footer.scss
@@ -1,44 +1,27 @@
 .page-footer {
+  padding: 80px 0;
+
   &__row {
     display: flex;
-    margin: 88px 0 84px;
 
     .row-col {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       width: calc(100% / 3);
-      color: $color-text-footer;
-
-      .col-links a {
-        margin: 0 10px;
-
-        &:not(:first-child) {
-          position: relative;
-
-          &::before {
-            content: '.';
-            position: absolute;
-            top: 1px;
-            left: -15px;
-            font-size: 30px;
-            line-height: 0;
-            pointer-events: none;
-            cursor: default;
-          }
-        }
-      }
 
       .col-copy {
-        margin-top: 16px;
-        font-size: 12px;
-        color: $color-text;
+        opacity: .6;
+        font-size: 13px;
       }
 
       &:first-child {
-        position: relative;
-        top: -12px;
         align-items: flex-start;
+      }
+
+      &:last-child {
+        align-items: flex-end;
       }
     }
   }
