--- a/assets/styles/components/button.scss
+++ b/assets/styles/components/button.scss
@@ -3,49 +3,32 @@
 }
 
 .button {
-  border-radius: 12px;
-  padding: 15px 28px 14px;
-  font-size: 16px;
-  font-weight: 500;
-  font-family: $font-regular;
+  position: relative;
+  border-radius: 8px;
+  padding: 11px 28px 10px 28px;
+  font-size: 15px;
+  font-weight: 800;
+  color: $color-white--smoked;
+  background-color: $color-button;
   cursor: pointer;
 
-  &--red {
-    color: $color-red;
-  }
+  &--arrow {
+    position: relative;
+    padding: 14px 35px 13px 25px;
+    font-size: 17px;
 
-  &--blue {
-
-  }
-
-  &--green {
-
-  }
-
-  &--yellow {
-
-  }
-
-  &--bordered {
-    border: 1px solid currentColor;
-
-    &.button--red {
-      background-color: $color-red--superlight2;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 17px;
+      right: 15px;
+      transform: rotate(45deg);
+      display: block;
+      width: 7px;
+      height: 7px;
+      border: 1px solid currentColor;
+      border-left-color: transparent;
+      border-top-color: transparent;
     }
-  }
-
-  &--solid {
-    border: 1px solid rgba(255, 255, 255, .48);
-    background-color: $color-red;
-
-    &.button--red {
-      box-shadow: 0px 6px 16px rgba(240, 82, 82, 0.02), 0px 2px 8px rgba(240, 82, 82, 0.24);
-      color: $color-white;
-    }
-  }
-
-  &--clean {
-    border: 1px solid transparent;
-    background-color: transparent;
   }
 }
