--- a/assets/styles/components/header/header.scss
+++ b/assets/styles/components/header/header.scss
@@ -8,18 +8,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 44px;
+    padding-bottom: 44px;
   }
 
   &__nav {
     .nav-list {
       display: flex;
-      padding: 40px 0;
     }
   }
 
   .nav-el {
     &:not(:first-child) {
-      margin-left: 48px;
+      margin-left: 80px;
     }
 
     &__link {
@@ -67,7 +68,7 @@
     left: 0;
     z-index: 1000099;
     transform: translateY(-160px);
-    background-color: $color-white;
+    background-color: rgba($color-white, .95);
     box-shadow: 0px 16px 32px rgba(33, 78, 146, 0.08), 0px 2px 8px rgba(33, 78, 146, 0.1);
   }
 
