--- a/assets/styles/components/header/header.scss
+++ b/assets/styles/components/header/header.scss
@@ -25,41 +25,22 @@
 
     &__link {
       position: relative;
+      border-bottom: 2px solid transparent;
+      transition: border-color .3s;
 
+      &:hover,
       &.nuxt-link-active .link-text {
-        position: relative;
-        color: $color-red;
-
-        &::before {
-          top: -38px;
-        }
-      }
-    }
-
-    &__submenu {
-      position: relative;
-      .link-text {
-        padding-bottom: 20px;
-      }
-
-      &:hover .submenu-box {
-        display: flex;
+        border-bottom: 2px solid $color-accent;
       }
     }
   }
 
   .link-text {
-    position: relative;
     font: {
       size: 16px;
       weight: 600;
     }
     cursor: pointer;
-    transition: .2s;
-
-    &.nuxt-link-active {
-      color: $color-red;
-    }
   }
 
   &--sticky {
