add styles to realizations-home component

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,3 +26,4 @@
 // Sections
 @import "./components/sections/service-home";
 @import "./components/sections/about-us-home";
+@import "./components/sections/realizations-home";
