--- a/assets/styles/global/_base.scss
+++ b/assets/styles/global/_base.scss
@@ -46,4 +46,9 @@ input[type=number]::-webkit-outer-spin-button {
   max-width: $container-width;
   margin: 0 auto;
   padding: 0 20px;
+
+  &--wide {
+    max-width: $container-wide-width;
+    padding: 0;
+  }
 }
