--- a/assets/styles/global/_typography.scss
+++ b/assets/styles/global/_typography.scss
@@ -14,25 +14,31 @@ html, body {
   line-height: 44px;
 }
 
-.heading-secondary {
-  font-size: 48px;
-  font-weight: 600;
-  line-height: 67px;
+.heading--big {
+  font-size: 45px;
+  font-weight: 800;
+  line-height: 50px;
 }
 
-.heading-3 {
-  font-size: 32px;
-  font-weight: 600;
-  line-height: 42px;
+.heading--small {
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 20px;
+  letter-spacing: 1.54px;
 }
 
 .text {
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 17px;
+  line-height: 25px;
   color: $color-text;
 
   &--center {
     text-align: center;
+  }
+
+  &--medium {
+    font-size: 15px;
+    line-height: 22px;
   }
 
   &--upper {
@@ -55,5 +61,10 @@ html, body {
 
   &--bold {
     font-weight: 800;
+  }
+
+  b,
+  strong {
+    font-weight: 600;
   }
 }
