--- a/assets/styles/components/sliders/slider.scss
+++ b/assets/styles/components/sliders/slider.scss
@@ -1,4 +1,8 @@
 .slider {
+  .swiper-wrapper {
+    height: 400px;
+  }
+
   .custom-pagination {
     display: flex;
     justify-content: space-between;
@@ -42,6 +46,31 @@
           background-color: $color-purple;
         }
       }
+    }
+  }
+
+  .swiper-slide {
+    border-radius: 12px;
+    overflow: hidden;
+    cursor: pointer;
+
+    img {
+      display: flex;
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+      object-position: center;
+    }
+
+    &::after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(0deg, rgba(84, 94, 249, 0.5), transparent)
     }
   }
 
