add styles for contact section and form

--- a/assets/styles/global/_base.scss
+++ b/assets/styles/global/_base.scss
@@ -49,6 +49,6 @@ input[type=number]::-webkit-outer-spin-button {
 
   &--wide {
     max-width: $container-wide-width;
-    padding: 0;
+    margin: 0 auto;
   }
 }
