--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -22,8 +22,10 @@
 @import "./components/button";
 @import "./components/hero/hero-primary";
 @import "./components/sliders/slider";
+@import "./components/forms/contact-form";
 
 // Sections
 @import "./components/sections/service-home";
 @import "./components/sections/about-us-home";
 @import "./components/sections/realizations-home";
+@import "./components/sections/contact-home";
