--- a/assets/styles/vars/_colors.scss
+++ b/assets/styles/vars/_colors.scss
@@ -16,6 +16,7 @@ $color-green--superlight: rgba(#75E0BE, .24);
 $color-gray--darkest: #363C51;
 $color-gray--dark: #404966;
 $color-gray--light: #555555;
+$color-gray--superlight: #c6d7e4;
 $color-purple: #545ef9;
 
 // Layout colors
