--- a/assets/styles/components/sections/realizations-home.scss
+++ b/assets/styles/components/sections/realizations-home.scss
@@ -1,6 +1,7 @@
 .realizations-home {
   border-radius: 100px;
   padding: 80px 150px 100px;
+  margin-bottom: 150px;
   background-color: $color-white;
   box-shadow: 0 17px 74px -20px rgba(113, 113, 113, 0.19);
 
