--- a/assets/styles/components/sliders/slider.scss
+++ b/assets/styles/components/sliders/slider.scss
@@ -23,23 +23,20 @@
 
     .swiper-pagination {
       position: relative;
-      display: block;
-      width: 70%;
-      height: 1px;
+      width: 66% !important;
+      height: 2px;
       border-radius: 5px;
       background-color: rgba(0,0,0, .1);
 
       &-progressbar {
         position: relative;
-        width: 90%;
-        height: 4px;
 
         &-fill {
           position: absolute;
           left: 0;
           top: -2px;
           width: 100%;
-          height: 6px;
+          height: 7px;
           transform: scale(0);
           transform-origin: left top;
           border-radius: 15px;
@@ -70,7 +67,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      background-image: linear-gradient(0deg, rgba(84, 94, 249, 0.5), transparent)
+      background-image: linear-gradient(0deg, rgba(84, 94, 249, 0.4) 5%, transparent 40%)
     }
   }
 
@@ -82,11 +79,10 @@
     border-radius: 50%;
     background-color: $color-purple;
     transition: .3s;
+    transform-origin: center center;
 
     &.swiper-button-disabled {
-      top: 85%;
-      height: 43px;
-      width: 43px;
+      transform: scale(.8);
       background-color: gray;
       opacity: .25;
 
@@ -107,9 +103,5 @@
 
   .swiper-button-next {
     left: 65px;
-
-    &.swiper-button-disabled {
-      left: 75px;
-    }
   }
 }
