--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -14,6 +14,7 @@
 
 // Pages
 @import "./pages/home-page";
+@import "./pages/rental-page";
 
 // Components
 @import "./components/header/header";
@@ -23,6 +24,7 @@
 @import "./components/hero/hero-primary";
 @import "./components/sliders/slider";
 @import "./components/forms/contact-form";
+@import "./components/sections/text-block";
 
 // Sections
 @import "./components/sections/service-home";
