add styles to homestaging page

--- a/assets/styles/global/_typography.scss
+++ b/assets/styles/global/_typography.scss
@@ -41,6 +41,11 @@ html, body {
     line-height: 22px;
   }
 
+  &--small {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
   &--upper {
     text-transform: uppercase;
 
