--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,6 +15,7 @@
 // Pages
 @import "./pages/home-page";
 @import "./pages/rental-page";
+@import "./pages/homestaging-page";
 
 // Components
 @import "./components/header/header";
@@ -22,6 +23,7 @@
 @import "./components/footer/footer-list";
 @import "./components/button";
 @import "./components/hero/hero-primary";
+@import "./components/hero/subpage-hero";
 @import "./components/sliders/slider";
 @import "./components/forms/contact-form";
 @import "./components/sections/text-block";
