--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import "./pages/home-page";
 @import "./pages/rental-page";
 @import "./pages/homestaging-page";
+@import "./pages/blog-page";
 
 // Components
 @import "./components/header/header";
@@ -27,6 +28,7 @@
 @import "./components/sliders/slider";
 @import "./components/forms/contact-form";
 @import "./components/sections/text-block";
+@import "./components/blog/blog-post-card";
 
 // Sections
 @import "./components/sections/service-home";
