add single post

--- a/assets/styles/components/blog/blog-post-card.scss
+++ b/assets/styles/components/blog/blog-post-card.scss
@@ -15,7 +15,7 @@
       height: 4px;
       width: 300px;
       border-radius: 10px;
-      background-color: $color-green--superlight;
+      background-color: rgba($color-accent, .3);
     }
   }
 
