add styles to blog post

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -29,6 +29,7 @@
 @import "./components/forms/contact-form";
 @import "./components/sections/text-block";
 @import "./components/blog/blog-post-card";
+@import "./components/blog/blog-post-single";
 
 // Sections
 @import "./components/sections/service-home";
