--- a/assets/styles/global/_base.scss
+++ b/assets/styles/global/_base.scss
@@ -51,4 +51,9 @@ input[type=number]::-webkit-outer-spin-button {
     max-width: $container-wide-width;
     margin: 0 auto;
   }
+
+  &--blog-post {
+    max-width: $container-thin-width;
+    margin: 0 auto;
+  }
 }
