--- a/assets/styles/components/forms/contact-form.scss
+++ b/assets/styles/components/forms/contact-form.scss
@@ -1,5 +1,4 @@
 .contact-form {
-
   fieldset {
     display: flex;
     flex-direction: column;
@@ -31,5 +30,22 @@
   textarea {
     min-height: 140px;
     resize: none;
+  }
+
+  .is-invalid {
+    span {
+      display: block;
+      margin-top: 6px;
+      color: $color-red;
+      font-size: 12px;
+    }
+
+    input {
+      border-color: $color-red;
+    }
+  }
+
+  .form-confirm {
+    color: $color-green;
   }
 }
