--- a/assets/styles/components/sections/about-us-home.scss
+++ b/assets/styles/components/sections/about-us-home.scss
@@ -27,6 +27,23 @@
         top: 0;
         right: -60px;
       }
+
+      @include media(mobile) {
+        padding-top: 35px;
+        margin-left: 0;
+
+        &::before {
+          content: none;
+        }
+      }
     }
+
+    @include media(mobile) {
+      flex-direction: column;
+    }
+  }
+
+  @include media(mobile) {
+    margin-bottom: 67px;
   }
 }
