--- a/assets/styles/pages/home-page.scss
+++ b/assets/styles/pages/home-page.scss
@@ -12,55 +12,52 @@
     }
   }
 
-  .hero .hero__wrapper {
-    position: relative;
-
-    &::after {
-      content: url(~assets/static/stripes/stripes-hp-1.svg);
-      position: absolute;
-      z-index: -1;
-      bottom: -120px;
-      left: 42%;
-      transform: translateX(-50%);
-    }
-  }
-
-  .service-home {
-    position: relative;
-
-    &::after {
-      content: url(~assets/static/stripes/stripes-hp-2.svg);
-      position: absolute;
-      z-index: -1;
-      bottom: -91%;
-      left: 52%;
-      transform: translateX(-50%);
-    }
-  }
-
-  .about-us-home__inner {
-    position: relative;
-
-    &::after {
-      content: url(~assets/static/stripes/stripes-hp-3.svg);
-      position: absolute;
-      z-index: -1;
-      bottom: -39%;
-      left: 42%;
-      transform: translateX(-50%);
-    }
-  }
-
+  .hero .hero__wrapper,
+  .service-home,
+  .about-us-home__inner,
   .realizations-home {
     position: relative;
 
     &::after {
-      content: url(~assets/static/stripes/stripes-hp-4.svg);
-      position: absolute;
-      z-index: -1;
-      bottom: -100%;
-      left: 50%;
-      transform: translateX(-50%);
+      @include media(mobile) {
+        display: none;
+      }
     }
+  }
+
+  .hero .hero__wrapper::after {
+    content: url(~assets/static/stripes/stripes-hp-1.svg);
+    position: absolute;
+    z-index: -1;
+    top: 66%;
+    left: 42%;
+    transform: translateX(-50%);
+  }
+
+  .service-home::after {
+    content: url(~assets/static/stripes/stripes-hp-2.svg);
+    position: absolute;
+    z-index: -1;
+    bottom: -91%;
+    left: 52%;
+    transform: translateX(-50%);
+  }
+
+  .about-us-home__inner::after {
+    content: url(~assets/static/stripes/stripes-hp-3.svg);
+    position: absolute;
+    z-index: -1;
+    top: 97%;
+    left: 42%;
+    transform: translateX(-50%);
+  }
+
+  .realizations-home::after {
+    content: url(~assets/static/stripes/stripes-hp-4.svg);
+    position: absolute;
+    z-index: -1;
+    top: 93%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
