--- a/assets/styles/components/hero/hero-primary.scss
+++ b/assets/styles/components/hero/hero-primary.scss
@@ -1,10 +1,18 @@
 .home-page .hero {
   &-primary {
     margin-bottom: 100px;
+
+    @include media(mobile) {
+      margin-bottom: 85px;
+    }
   }
 
   &__wrapper {
     display: flex;
+
+    @include media(mobile) {
+      flex-direction: column-reverse;
+    }
   }
 
   &__text {
@@ -15,6 +23,12 @@
     .hero-heading h1:first-child {
       max-width: 350px;
     }
+
+    @include media(mobile) {
+      max-width: 280px;
+      margin-right: -20px;
+      margin-left: auto;
+    }
   }
 
   &__actions {
@@ -23,6 +37,10 @@
     .button-wrapper:not(:first-child) {
       margin-left: 6px;
     }
+
+    @include media(mobile) {
+      margin-top: 35px;
+    }
   }
 
   &__image {
@@ -30,11 +48,37 @@
     top: -150px;
     right: -12px;
     width: 63%;
+    height: 720px;
     margin-right: -250px;
+
+    img {
+      max-width: 100%;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      z-index: 10000;
+      object-position: left;
+    }
+
+    @include media(mobile) {
+      top: 0;
+      right: -60px;
+      width: 100%;
+      height: unset;
+      margin-top: 20px;
+      margin-right: 0;
+
+      img {
+        object-position: center;
+      }
+    }
   }
 
   &-heading {
     padding-top: 75px;
-  }
 
+    @include media(mobile) {
+      padding-top: 45px;
+    }
+  }
 }
