--- a/assets/styles/components/sections/contact-home.scss
+++ b/assets/styles/components/sections/contact-home.scss
@@ -21,6 +21,14 @@
 
         .row-col:first-child {
           margin-right: 100px;
+
+          @include media(tablet) {
+            margin-right: 20px;
+          }
+        }
+
+        @include media(mobile) {
+          flex-direction: column;
         }
       }
 
@@ -35,6 +43,11 @@
           margin-top: 10px;
         }
       }
+
+      @include media(mobile) {
+        margin-right: 0;
+        max-width: 100%;
+      }
     }
 
     .col-form {
@@ -42,5 +55,35 @@
       max-width: 460px;
       padding-top: 70px;
     }
+
+    @include media(mobile) {
+      flex-direction: column;
+
+      .col-form {
+        max-width: 100%;
+      }
+
+      .button {
+        width: 100%;
+      }
+
+      .col-info__image {
+        text-align: center;
+      }
+
+      .text--title {
+        text-align: left;
+        margin-bottom: 32px;
+      }
+
+      .row-col .text {
+        display: block;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  @include media(mobile) {
+    margin-bottom: 100px;
   }
 }
