--- a/assets/styles/global/_typography.scss
+++ b/assets/styles/global/_typography.scss
@@ -12,12 +12,22 @@ html, body {
   font-size: 36px;
   font-weight: 800;
   line-height: 44px;
+
+  @include media(mobile) {
+    font-size: 28px;
+    line-height: 32px;
+  }
 }
 
 .heading--big {
   font-size: 45px;
   font-weight: 800;
   line-height: 50px;
+
+  @include media(mobile) {
+    font-size: 36px;
+    line-height: 40px;
+  }
 }
 
 .heading--small {
@@ -66,6 +76,11 @@ html, body {
     font-size: 20px;
     line-height: 20px;
     letter-spacing: 1.54px;
+
+    @include media(mobile) {
+      font-size: 16px;
+      letter-spacing: 1.23px;
+    }
   }
 
   &--bold {
