--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,3 +1,7 @@
+// Helpers
+@import "./helpers/aspect-ratio";
+@import "./helpers/breakpoints";
+
 // Variabler
 @import "./vars/colors";
 @import "./vars/fonts";
@@ -8,9 +12,6 @@
 @import "./global/base";
 @import "./global/router-transitions";
 @import "./global/typography";
-
-// Helpers
-@import "./helpers/aspect-ratio";
 
 // Pages
 @import "./pages/home-page";
