--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -21,6 +21,7 @@
 
 // Components
 @import "./components/header/header";
+@import "./components/header/mobile-menu";
 @import "./components/footer/footer";
 @import "./components/footer/footer-list";
 @import "./components/button";
