--- a/assets/styles/components/blog/blog-post-card.scss
+++ b/assets/styles/components/blog/blog-post-card.scss
@@ -67,6 +67,11 @@
       width: 100%;
       height: 100%;
     }
+
+    @include media(mobile) {
+      height: 140px;
+      border-radius: 10px;
+    }
   }
 
   .card-desc {
