--- a/assets/styles/global/_base.scss
+++ b/assets/styles/global/_base.scss
@@ -9,6 +9,10 @@ body {
     text-rendering: optimizeLegibility
   }
 
+  &.frozen {
+    overflow: hidden;
+  }
+
   img {
     max-width: 100%;
   }
@@ -63,6 +67,10 @@ input[type=number]::-webkit-outer-spin-button {
   &--blog-post {
     max-width: $container-thin-width;
     margin: 0 auto;
+
+    @include media(mobile) {
+      padding: 0 20px;
+    }
   }
 
   @include media(mobile) {
