--- a/assets/styles/components/hero/subpage-hero.scss
+++ b/assets/styles/components/hero/subpage-hero.scss
@@ -1,22 +1,31 @@
 .subpage-hero {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  padding-top: 50px;
+
+  .hero-col {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    padding-top: 50px;
+    flex-direction: column;
+    width: 50%;
+  }
+
+  .hero-heading {
+    max-width: 450px;
+    margin-bottom: 50px;
+  }
+
+  .hero-image {
+    height: 344px;
+    padding: 20px 0 0 0;
+  }
+
+  @include media(mobile) {
+    flex-direction: column;
+    padding-top: 0;
 
     .hero-col {
-        display: flex;
-        flex-direction: column;
-        width: 50%;
+      width: 100%;
     }
-
-    .hero-heading {
-        max-width: 450px;
-        margin-bottom: 50px;
-    }
-
-    .hero-image {
-        height: 344px;
-        padding: 20px 0 0 0;
-    }
+  }
 }
