--- a/assets/styles/components/sections/realizations-home.scss
+++ b/assets/styles/components/sections/realizations-home.scss
@@ -54,6 +54,11 @@
       &__block:not(:last-child) {
         margin-bottom: 80px;
       }
+
+      @include media(mobile) {
+        max-width: 100%;
+        margin-left: 0;
+      }
     }
 
     @include media(mobile) {
