--- a/assets/styles/pages/rental-page.scss
+++ b/assets/styles/pages/rental-page.scss
@@ -1,45 +1,72 @@
 .rental-page {
-    &__cols {
-        margin: 120px 0 240px;
+  &__cols {
+    margin: 120px 0 240px;
+    display: flex;
+
+    .col {
+      width: 50%;
+    }
+  }
+
+  &__benefits {
+    .heading--small {
+      margin-bottom: 60px;
+    }
+
+    .benefits-row {
+      display: flex;
+      flex-flow: row wrap;
+    }
+
+    .benefits-col {
+      display: flex;
+      align-items: center;
+      width: calc(100% / 3);
+      margin-bottom: 40px;
+
+      .col-text {
+        max-width: 300px;
+        padding-left: 24px;
+        font-size: 16px;
+        line-height: 20px;
+        opacity: .6;
+      }
+
+      .col-img {
         display: flex;
-
-        .col {
-            width: 50%;
-        }
+        flex-shrink: 0;
+        align-items: center;
+        justify-content: center;
+        height: 63px;
+        width: 63px;
+      }
     }
+  }
 
-    &__benefits {
-        .heading--small {
-            margin-bottom: 60px;
+  @include media(mobile) {
+    &__cols {
+      flex-direction: column;
+      margin: 60px 0 120px;
+
+      .col {
+        width: 100%;
+
+        &:not(:last-child) {
+          margin-bottom: 60px;
         }
-
-        .benefits-row {
-            display: flex;
-            flex-flow: row wrap;
-        }
-
-        .benefits-col {
-            display: flex;
-            align-items: center;
-            width: calc(100% / 3);
-            margin-bottom: 40px;
-
-            .col-text {
-                max-width: 300px;
-                padding-left: 24px;
-                font-size: 16px;
-                line-height: 20px;
-                opacity: .6;
-            }
-
-            .col-img {
-                display: flex;
-                flex-shrink: 0;
-                align-items: center;
-                justify-content: center;
-                height: 63px;
-                width: 63px;
-            }
-        }
+      }
     }
+  }
+
+  &__benefits .heading--small {
+    margin-bottom: 32px;
+  }
+
+  .benefits-row {
+    flex-flow: column;
+
+    .benefits-col {
+      width: 100%;
+    }
+  }
 }
