--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -37,4 +37,5 @@
 @import "./components/sections/service-home";
 @import "./components/sections/about-us-home";
 @import "./components/sections/realizations-home";
+@import "./components/sections/realizations-home--new";
 @import "./components/sections/contact-home";
