--- a/assets/styles/pages/home-page.scss
+++ b/assets/styles/pages/home-page.scss
@@ -15,7 +15,7 @@
   .hero .hero__wrapper,
   .service-home,
   .about-us-home__inner,
-  .realizations-home {
+  .realizations-home--new {
     position: relative;
 
     &::after {
