--- a/assets/styles/components/hero/subpage-hero.scss
+++ b/assets/styles/components/hero/subpage-hero.scss
@@ -8,6 +8,12 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+
+    &:first-child {
+      @include media(mobile) {
+        margin-bottom: 30px;
+      }
+    }
   }
 
   .hero-heading {
